fixed wrap, and added project

--- a/src/App.css
+++ b/src/App.css
@@ -204,6 +204,8 @@ main {
 .portfolioContainer {
   justify-content: center;
   min-height: 60vh;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .petBuddies{
